--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.example.dehcors.teleconsultorapp">
 
     <!-- To auto-complete the email text field in the login form with the user's emails -->
@@ -14,25 +15,24 @@
          location permissions for the 'MyLocation' functionality. 
     -->
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.VIBRATE" />
 
     <application
         android:allowBackup="true"
         android:icon="@mipmap/doctor_droid"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
-            android:label=""
+        android:theme="@style/AppTheme" >
+        <activity android:name=".MainActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
             android:name=".UserLogin"
             android:label="@string/title_activity_user_login"
-            android:parentActivityName=".MainActivity">
+            android:parentActivityName=".MainActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.dehcors.teleconsultorapp.MainActivity" />
@@ -41,7 +41,7 @@
             android:name=".UserDashboard"
             android:label="@string/title_activity_user__dashboard"
             android:parentActivityName=".UserLogin"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:theme="@style/AppTheme.NoActionBar" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.dehcors.teleconsultorapp.UserLogin" />
@@ -50,7 +50,7 @@
             android:name=".NovoUsuario"
             android:label="@string/title_activity_novo_usuario"
             android:parentActivityName=".MainActivity"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:theme="@style/AppTheme.NoActionBar" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.dehcors.teleconsultorapp.MainActivity" />
@@ -59,7 +59,7 @@
             android:name=".NovaConsulta"
             android:label="@string/title_activity_nova_consulta"
             android:parentActivityName=".UserDashboard"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:theme="@style/AppTheme.NoActionBar" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.dehcors.teleconsultorapp.UserDashboard" />
@@ -67,7 +67,7 @@
         <activity
             android:name=".ConsultListView"
             android:label="@string/title_activity_consult_list_view"
-            android:parentActivityName=".UserDashboard">
+            android:parentActivityName=".UserDashboard" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.dehcors.teleconsultorapp.UserDashboard" />
@@ -80,7 +80,7 @@
         <activity
             android:name=".RotaActivity"
             android:label="@string/title_activity_rota"
-            android:parentActivityName=".UserDashboard">
+            android:parentActivityName=".UserDashboard" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.dehcors.teleconsultorapp.UserDashboard" />
@@ -88,7 +88,7 @@
         <activity
             android:name=".RelatoriosActivity"
             android:label="@string/act_rel_title"
-            android:parentActivityName=".UserDashboard">
+            android:parentActivityName=".UserDashboard" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.dehcors.teleconsultorapp.UserDashboard" />
@@ -96,14 +96,14 @@
         <activity
             android:name=".UsuarioLogado"
             android:label="@string/title_logado"
-            android:parentActivityName=".UserDashboard">
+            android:parentActivityName=".UserDashboard" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.dehcors.teleconsultorapp.UserDashboard" />
         </activity>
         <activity
             android:name=".MapsActivity"
-            android:label="@string/title_activity_maps">
+            android:label="@string/title_activity_maps" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.dehcors.teleconsultorapp.RotaActivity" />
