ajuste nas telas de listar consultas e listar diagnósticos

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -50,7 +50,7 @@
         </activity>
         <activity
             android:name=".UserDashboard"
-            android:label="@string/title_activity_user__dashboard"
+            android:label="@string/title_activity_user_dashboard"
             android:parentActivityName=".MainActivity"
             android:theme="@style/AppTheme.NoActionBar">
             <meta-data
@@ -84,14 +84,28 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.dehcors.teleconsultorapp.UserDashboard" />
         </activity>
+        <activity android:name=".ArquivosActivity">
+
+        </activity>
         <activity
             android:name=".ConsultaListView"
-            android:label="@string/title_activity_lista_arquivos"
+            android:label="@string/title_consult_navigation"
             android:parentActivityName=".UserDashboard"
             android:theme="@style/AppTheme.NoActionBar">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.example.dehcors.teleconsultorapp.UserDashboard" />
+                android:value="com.example.dehcors.teleconsultorapp.UserDashboard">
+            </meta-data>
+        </activity>
+
+        <activity android:name=".DiagnosticoListView"
+            android:label="@string/title_diagn_navigation"
+            android:parentActivityName=".UserDashboard"
+            android:theme="@style/AppTheme.NoActionBar">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.example.dehcors.teleconsultorapp.UserDashboard">
+            </meta-data>
         </activity>
 
         <meta-data
@@ -124,7 +138,7 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.dehcors.teleconsultorapp.UserDashboard" />
         </activity>
-        <activity android:name=".DiagnosticoListView" />
+
         <activity
             android:name=".NovoDiagnostico"
             android:label="@string/title_activity_novo_diagnostico"
