atualização de permissões e amostragem de consulta por perfil.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -143,7 +143,10 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.dehcors.teleconsultorapp.UserDashboard" />
         </activity>
-        <activity android:name=".ListaDeConsultas"></activity>
+        <activity android:name=".ListaDeConsultas"
+            android:label="@string/consultas">
+
+        </activity>
     </application>
 
 </manifest>
