--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -145,11 +145,17 @@
         </activity>
         <activity
             android:name=".ListaDeConsultas"
-            android:label="@string/consultas" />
+            android:label="@string/consultas"
+            android:theme="@style/AppTheme.NoActionBar"/>
+
         <activity android:name=".AtenderActivity"
-            android:label="@string/atender"/>
+            android:label="@string/atender"
+            android:theme="@style/AppTheme.NoActionBar"/>
+
         <activity android:name=".VisualizarConsultasActivity"
-            android:label="@string/visualizarconsultas"></activity>
+            android:label="@string/visualizarconsultas"
+            android:theme="@style/AppTheme.NoActionBar">
+        </activity>
     </application>
 
 </manifest>
